# scodex

./: .gitignore  ADAPTER_FRAMEWORK_V2.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  codex-autoswitch.py  codex-autoswitch_test.py  install.ps1  install.sh
.github/workflows/: release.yml
scripts/: cli-regression.sh
src/: cli.rs  lib.rs  main.rs
src/adapters/: codex.rs  mod.rs
src/adapters/codex/: account.rs  auth.rs  deploy.rs  mod.rs  repo_sync.rs  ui.rs  usage.rs
src/core/: engine.rs  mod.rs  policy.rs  state.rs  storage.rs  ui.rs
src/core/sync/: git.rs  mod.rs  ssh.rs
