[package]
name = "scodex"
version = "0.1.12"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Cross-platform account-aware launcher for agent CLIs."

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
self-replace = "1.5"
sha2 = "0.10"
tar = "0.4"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
unicode-width = "0.2"
uuid = { version = "1.18", features = ["v4"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
